# posgi

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  NOTICE  PosgiConfig.h.in  README.md  build.sh  dev-container-start.sh  posgi.code-workspace
bundles/console/impl/: command_lb.cc  command_lb.h  commands_framework.cc  commands_framework.h  osgi_console.cc  osgi_console.h
bundles/console/include/org/osgi/service/console/: command.h  command_processor.h  command_session.h  console.h
docs/: build.md  development.md  history.md  implementation.md  project.md  references.md  using.md
docs/images/: logo-ascii.txt
docs/osgi-r8/java/: .gitignore  pom.xml
docs/osgi-r8/java/src/main/java/org/posgi/java/samples/sample03/: BundleA.java  Sample03.java
docs/osgi-r8/java/src/main/java/org/posgi/java/utils/: SyntheticBundleBuilder.java  TestUtils.java
docs/osgi-r8/java/src/test/java/org/posgi/java/samples/sample03/: Sample03Test.java
framework/: Makefile  framework_factory.cc  main.cc  main_test.cc  osgi_console.cc  posgi.cc  posgi.h  posgi_test.cc
framework/impl/: bundle_context_impl.cc  bundle_impl.cc  framework_impl.cc  manifest_parser.cc  manifest_parser_fuzz_test.cc  manifest_parser_test.cc
framework/impl/fuzz_tests_manifest_inputs/: manifest_felix.mf  manifest_invalid_simple.mf
framework/impl/utils/: PosgiTxtFormatter_fuzz_test.cc  PosgiTxtFormatter_test.cc  file_utils.cc  system_utils.cc
framework/include/org/osgi/framework/: bundle.h  bundle_activator.h  bundle_context.h  bundle_revision.h  constants.h
framework/include/org/osgi/framework/launch/: framework.h  framework_factory.h
framework/include/org/osgi/framework/service/: osgi_console.h
framework/include/org/posgi/framework/impl/: bundle_context_impl.h  bundle_impl.h  framework_impl.h  manifest_parser.h
framework/include/org/posgi/framework/impl/util/: printable_mutex.h
framework/include/org/posgi/framework/impl/utils/: PosgiTxtFormatter.h  file_utils.h  system_utils.h
samples/sample_simple_01/: Makefile  core_dump.cc  hello.cc  include_checks.cc  main.cc  main.cpp  string_format.cc  thread.cc
samples/sample_simple_02/: Makefile  README.md  main.cc
samples/sample_simple_03/: Makefile  main.cc  some_bundle.cc  some_bundle.h
samples/test-cpp-modules/01_simple/: Makefile  README.md  client.cc  math.cc
samples/test-cpp-modules/02_interface-impl/: Makefile  README.md  client.cc  math.cc
samples/test-cpp-modules/03_cmake/: CMakeLists.txt  README.md  gcc13_gen_system_modules.sh  math.cc  math_impl.cc  modules-patched.cmake  modules.cmake
samples/test-cpp-modules/10_gcc-crash-constant/: Makefile  README.md  ccRJ91Vu.out.txt  client.cc  m.cc
samples/test-cpp-modules/11_gcc-internal-error-tsubst_copy/: Makefile  README.md  cczqIydL.out.txt  i.cc  m.cc  m_impl.cc  m_public.cc
scripts/: setup.sh
